src/test/ui/parser/attr-before-eof.stderr
error: expected item after attributes
  --> $DIR/attr-before-eof.rs:3:16
   |
LL | #[derive(Debug)]
   |                ^

error: aborting due to previous error

